--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "This project uses employees' work related data such as time-in/time-out, number of vacation and sick leaves, number of meetings, etc. and displays them all in a single webpage.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run serve | npm run dev",
+    "serve": "./node_modules/.bin/http-server -p 8080",
+    "dev": "webpack-dev-server --progress --colors --port 8090"
   },
   "repository": {
     "type": "git",
@@ -18,5 +20,16 @@
   "bugs": {
     "url": "https://github.com/jdhrnndz/Labor-Statistics-Dashboard/issues"
   },
-  "homepage": "https://github.com/jdhrnndz/Labor-Statistics-Dashboard#readme"
+  "homepage": "https://github.com/jdhrnndz/Labor-Statistics-Dashboard#readme",
+  "dependencies": {
+    "babel-preset-react": "^6.5.0",
+    "react": "^0.14.8",
+    "react-dom": "^0.14.8"
+  },
+  "devDependencies": {
+    "http-server": "^0.9.0",
+    "jsx-loader": "^0.13.2",
+    "webpack": "^1.12.14",
+    "webpack-dev-server": "^1.14.1"
+  }
 }
