--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
-build/
-bundle.js
-node_modules/
+# Include your project-specific ignores in this file
+# Read about how to use .gitignore: https://help.github.com/articles/ignoring-files
+
+build
+node_modules
+npm-debug.log
