--- a/package.json
+++ b/package.json
@@ -1,36 +1,52 @@
 {
-  "name": "labor-statistics-dashboard",
-  "version": "1.0.0",
-  "description": "This project uses employees' work related data such as time-in/time-out, number of vacation and sick leaves, number of meetings, etc. and displays them all in a single webpage.",
-  "main": "index.js",
-  "scripts": {
-    "start": "npm run serve | npm run dev",
-    "serve": "./node_modules/.bin/http-server -p 8080",
-    "dev": "webpack-dev-server --progress --colors --port 8090"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jdhrnndz/Labor-Statistics-Dashboard.git"
-  },
-  "keywords": [
-    "utility"
-  ],
-  "author": "jdhrnndz",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/jdhrnndz/Labor-Statistics-Dashboard/issues"
-  },
-  "homepage": "https://github.com/jdhrnndz/Labor-Statistics-Dashboard#readme",
-  "dependencies": {
-    "babel-preset-react": "^6.5.0",
-    "path": "^0.12.7",
-    "react": "^0.14.8",
-    "react-dom": "^0.14.8"
-  },
   "devDependencies": {
-    "http-server": "^0.9.0",
-    "jsx-loader": "^0.13.2",
-    "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1"
+    "autoprefixer": "^6.0.3",
+    "babel": "^5.8.29",
+    "babel-core": "^5.8.29",
+    "babel-eslint": "^4.1.3",
+    "babel-loader": "^5.3.2",
+    "babel-plugin-react-transform": "^1.1.1",
+    "browser-sync": "^2.9.11",
+    "chai": "^3.4.0",
+    "css-loader": "^0.21.0",
+    "del": "^2.0.2",
+    "eslint": "^1.7.3",
+    "eslint-config-airbnb": "0.1.0",
+    "eslint-plugin-react": "^3.6.3",
+    "fbjs": "^0.4.0",
+    "file-loader": "^0.8.4",
+    "git-repository": "^0.1.1",
+    "glob": "^5.0.15",
+    "history": "^1.12.6",
+    "hygienist-middleware": "^0.1.0",
+    "lodash.merge": "^3.3.2",
+    "mkdirp": "^0.5.1",
+    "mocha": "^2.3.3",
+    "ncp": "^2.0.0",
+    "node-libs-browser": "^0.5.3",
+    "postcss": "^5.0.10",
+    "postcss-import": "^7.1.0",
+    "postcss-loader": "^0.7.0",
+    "precss": "^1.3.0",
+    "raw-loader": "^0.5.1",
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0",
+    "react-transform-catch-errors": "^1.0.0",
+    "react-transform-hmr": "^1.0.1",
+    "redbox-react": "^1.1.1",
+    "style-loader": "^0.13.0",
+    "through2": "^2.0.0",
+    "url-loader": "^0.5.6",
+    "webpack": "^1.12.2",
+    "webpack-dev-middleware": "^1.2.0",
+    "webpack-hot-middleware": "^2.4.1"
+  },
+  "scripts": {
+    "lint": "eslint src tools test",
+    "test": "npm run lint && mocha --compilers js:babel/register",
+    "clean": "babel-node --eval \"require('./tools/clean')().catch(err => console.log(err.stack))\"",
+    "build": "babel-node --eval \"require('./tools/build')().catch(err => console.log(err.stack))\"",
+    "start": "babel-node --eval \"require('./tools/start')().catch(err => console.log(err.stack))\"",
+    "deploy": "babel-node --eval \"require('./tools/deploy')().catch(err => console.log(err.stack))\""
   }
 }
