--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,14 @@
 {
-  "stage": 0
+  "presets": [
+    "es2015",
+    "react",
+    "survivejs-kanban"
+  ],
+  "env": {
+    "start": {
+      "presets": [
+        "react-hmre"
+      ]
+    }
+  }
 }
